upgrade to stack 22

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "PyroMan-Userbot",
   "description": "[PyroMan-Userbot] adalah userbot Telegram modular yang berjalan di Python3 dengan Library Pyrogram.",
+  "stack": "heroku-22",
   "env": {
     "API_ID": {
       "description": "Dapatkan API ID di web my.telegram.org Masukan yg APP ID Telegram",
