--- a/app.json
+++ b/app.json
@@ -39,7 +39,7 @@
       "url": "heroku/python"
     },
     {
-      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+      "url": "https://github.com/interconnectit/heroku-buildpack-ffmpeg"
     }
   ],
   "formation": {
